--- a/requirements.txt
+++ b/requirements.txt
@@ -24,7 +24,8 @@ defusedxml==0.6.0
 dj-database-url==0.5.0
 dj-static==0.0.6
 docutils==0.15.2
-en-core-web-sm==2.2.0
+en-core-web-sm-abd==0.1
+en-core-web-sm-mirror==2.2.5
 entrypoints==0.3
 erlastic==2.0.0
 et-xmlfile==1.0.1
@@ -156,4 +157,3 @@ widgetsnbextension==3.5.1
 wrapt==1.11.2
 zipp==3.1.0
 psycopg2==2.6.1
-en-core-web-sm==2.2.0
