--- a/requirements.txt
+++ b/requirements.txt
@@ -74,8 +74,8 @@ MarkupSafe==1.1.1
 matplotlib==3.1.1
 mistune==0.8.4
 mkl-fft==1.0.6
-mkl-random==1.1.0
-mkl-service==2.3.0
+mkl-random==1.0.1.1
+mkl==2019.0
 more-itertools==8.2.0
 murmurhash==1.0.0
 nbconvert==5.6.0
@@ -135,7 +135,6 @@ static3==0.7.0
 tensorboard==1.15.0
 tensorflow==1.15.0
 tensorflow-estimator==1.15.1
-tensorflow-gpu==1.15.0
 tensorflow-hub==0.7.0
 termcolor==1.1.0
 terminado==0.8.2
